figure is updated

--- a/ms.tex
+++ b/ms.tex
@@ -403,9 +403,13 @@ Unlike usual hot jupiters, RGHJsEst are not subject to tidal lock, as the gravit
 \subsection{Estimate of Planetary Magnetic Field}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+
+Planetary magnetic
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}[bp]
-   \plotonesc{contour_B.pdf}
+   \plotoneh{r_c.pdf}
+   \plotoneh{rho_c.pdf}
+   \plotoneh{contour_B.pdf}
    \caption{Planetary magnetic field as a function of age and planetary mass, based on \citet{christensen2010}. }
   \label{fig:radio}
 \end{figure}
