--- a/biblio.bib
+++ b/biblio.bib
@@ -2,12 +2,28 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Yuka Fujii at 2015-05-16 16:14:05 +0900 
+%% Created for Yuka Fujii at 2015-05-17 17:13:20 +0900 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{griesmeier2004,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2004A%26A...425..753G},
+	Author = {{Grie{\ss}meier}, J.-M. and {Stadelmann}, A. and {Penz}, T. and {Lammer}, H. and {Selsis}, F. and {Ribas}, I. and {Guinan}, E.~F. and {Motschmann}, U. and {Biernat}, H.~K. and {Weiss}, W.~W.},
+	Date-Added = {2015-05-17 08:13:09 +0000},
+	Date-Modified = {2015-05-17 08:13:20 +0000},
+	Doi = {10.1051/0004-6361:20035684},
+	Journal = {\aap},
+	Keywords = {stars: planetary systems, stars: winds, outflows, magnetic fields},
+	Month = oct,
+	Pages = {753-762},
+	Title = {{The effect of tidal locking on the magnetospheric and atmospheric evolution of ``Hot Jupiters''}},
+	Volume = 425,
+	Year = 2004,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1051/0004-6361:20035684}}
 
 @article{farrell1999,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
